--- a/templates/taiga/0/rancher-compose.yml
+++ b/templates/taiga/0/rancher-compose.yml
@@ -1,8 +1,7 @@
 .catalog:
-  name: "Route53 DNS"
-  version: "v0.1.5-rancher1"
-  description: "Rancher External DNS service powered by Amazon Route53. Requires Rancher version 0.44.0"
-  maximum_rancher_version: v1.1.99
+  name: "Taiga"
+  version: "v3.1.3"
+  description: "Taiga project management system"
   questions:
     - variable: "DATABASE_USER"
       label: "Database username"
