--- a/templates/taiga/0/docker-compose.yml
+++ b/templates/taiga/0/docker-compose.yml
@@ -1,93 +1,126 @@
-postgresql:
-  image: postgres:10-alpine
-  volumes:
+version: '2'
+services:
+  celeryworker:
+    image: registry.witsawa.com/dockertaiga_backend:latest
+    environment:
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET}
+      DJANGO_DB_USER: ${DATABASE_USER}
+      DJANGO_DB_NAME: ${DATABASE_NAME}
+      DJANGO_DB_PASSWORD: ${DATABASE_PASSWORD}
+      TAIGA_HOSTNAME: ${TAIGA_HOSTNAME}
+    stdin_open: true
+    entrypoint:
+    - /scripts/entrypoint.sh
+    volumes:
+    - taiga_backend_media:/taiga_backend/media
+    - taiga_static_root:/taiga_backend/static-root
+    tty: true
+    links:
+    - redis:redis
+    - rabbitmq:rabbitmq
+    command:
+    - celery
+    - -A
+    - taiga
+    - worker
+    - -P
+    - gevent
+    - -c
+    - '4'
+    - --loglevel
+    - info
+    labels:
+      io.rancher.container.pull_image: always
+  postgresql:
+    image: postgres:10-alpine
+    environment:
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+    stdin_open: true
+    volumes:
     - postgres_data:/var/lib/postgresql/data
     - postgres_backup:/backups
-  environment:
-    - POSTGRES_USER=${DATABASE_USER}
-    - POSTGRES_DB=${DATABASE_NAME}
-    - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
-
-redis:
-  image: redis:4.0-alpine
-
-rabbitmq:
-  image: rabbitmq:3.6-alpine
-  hostname: taiga_rabbitmq
-  environment:
-    # https://www.rabbitmq.com/clustering.html#erlang-cookie
-    - RABBITMQ_ERLANG_COOKIE='${RABBIT_SECRET_COOKIE}'
-    - RABBITMQ_DEFAULT_USER=${RABBIT_USER}
-    - RABBITMQ_DEFAULT_PASS=${RABBIT_PASSWORD}
-    - RABBITMQ_DEFAULT_VHOST=${RABBIT_VHOST}
-    # http://www.rabbitmq.com/configure.html#config-items
-    # - RABBITMQ_HIPE_COMPILE=1
-
-backend:
-  image: registry.witsawa.com/dockertaiga_backend:latest
-  volumes:
+    tty: true
+    labels:
+      io.rancher.container.pull_image: always
+  backend:
+    image: registry.witsawa.com/dockertaiga_backend:latest
+    environment:
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET}
+      DJANGO_DB_USER: ${DATABASE_USER}
+      DJANGO_DB_NAME: ${DATABASE_NAME}
+      DJANGO_DB_PASSWORD: ${DATABASE_PASSWORD}
+      TAIGA_HOSTNAME: ${TAIGA_HOSTNAME}
+      USE_ANYMAIL: ${USE_ANYMAIL}
+      ANYMAIL_MAILGUN_API_KEY: ${ANYMAIL_MAILGUN_API_KEY}
+      DJANGO_DEFAULT_FROM_EMAIL: ${DJANGO_DEFAULT_FROM_EMAIL}
+    stdin_open: true
+    entrypoint:
+    - /scripts/entrypoint.sh
+    volumes:
     - taiga_backend_media:/taiga_backend/media
-    - /taiga_backend/static-root
-  environment:
-    # - DJANGO_DEBUG=True
-    - DJANGO_SECRET_KEY=${DJANGO_SECRET}
-    # DJANGO_DB_* must have the same values as <postgresql> service
-    - DJANGO_DB_USER=${DATABASE_USER}
-    - DJANGO_DB_NAME=${DATABASE_NAME}
-    - DJANGO_DB_PASSWORD=${DATABASE_PASSWORD}
-    # - DJANGO_ALLOWED_HOSTS=example.com,example2.com
-    # Must be in lowercase, because we are using in a json file <frontend> (conf.json)
-    # - TAIGA_PUBLIC_REGISTER_ENABLED=false
-    # - TAIGA_SSL=True
-    # - TAIGA_HOSTNAME=example.com
-    # - TAIGA_SKIP_DB_CHECK=True
-    # checkdb.py
-    # - TAIGA_DB_CHECK_LIMIT_RETRIES='5'
-    # - TAIGA_DB_CHECK_SLEEP_INTERVAL='5.5'
-    # ANYMAIL
-    # - USE_ANYMAIL=True
-    # - ANYMAIL_MAILGUN_API_KEY=MAILGUN-KEY
-    # - DJANGO_DEFAULT_FROM_EMAIL=example@example.com
-  user: taiga
-  entrypoint: ['/scripts/entrypoint.sh']
-  # command: ['gunicorn', '--worker-class', 'gevent', '--workers', '10', '-b', '0.0.0.0:8000', 'taiga.wsgi']
-  command: ['gunicorn', '-b', '0.0.0.0:8000', 'taiga.wsgi']
+    - taiga_static_root:/taiga_backend/static-root
+    tty: true
+    command:
+    - gunicorn
+    - -b
+    - 0.0.0.0:8000
+    - taiga.wsgi
+    labels:
+      io.rancher.container.pull_image: always
+  rabbitmq:
+    image: rabbitmq:3.6-alpine
+    environment:
+      RABBITMQ_ERLANG_COOKIE: '${RABBIT_SECRET_COOKIE}'
+      RABBITMQ_DEFAULT_USER: ${RABBIT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBIT_PASSWORD}
+      RABBITMQ_DEFAULT_VHOST: ${RABBIT_VHOST}
+    stdin_open: true
+    tty: true
+    labels:
+      io.rancher.container.pull_image: always
+  redis:
+    image: redis:4.0-alpine
+    stdin_open: true
+    tty: true
+    labels:
+      io.rancher.container.pull_image: always
+  events:
+    image: registry.witsawa.com/dockertaiga_events:latest
+    environment:
+      TAIGA_SECRET: ${DJANGO_SECRET}
+    stdin_open: true
+    tty: true
+    links:
+    - rabbitmq:rabbitmq
+    labels:
+      io.rancher.container.pull_image: always
+  frontend:
+    image: registry.witsawa.com/dockertaiga_frontend:latest
+    environment:
+      TAIGA_API_URL: '"${TAIGA_PROTOCOL}://${TAIGA_HOSTNAME}/api/v1/"'
+      TAIGA_EVENTS_URL: '"${TAIGA_EVENT_PROTOCOL}://${TAIGA_HOSTNAME}/events"'
+      TAIGA_PUBLIC_REGISTER_ENABLED: 'false'
+      DEFAULT_LANGUAGE: '"en"'
+    stdin_open: true
+    volumes:
+    - taiga_backend_media:/taiga_backend/media
+    - taiga_static_root:/taiga_backend/static-root
+    tty: true
+    links:
+    - events:events
+    - backend:backend
+    - postgresql:postgresql
+    labels:
+      io.rancher.container.pull_image: always
+volumes:
+  postgres_data:
+    driver: local
+  postgres_backup:
+    driver: local
+  taiga_backend_media:
+    driver: local
+  taiga_static_root:
+    driver: local
 
-frontend:
-  image: registry.witsawa.com/dockertaiga_frontend:latest
-  volumes_from:
-    - backend:ro
-  # environment:
-  # Must be in lowercase, because we are using in a json file (conf.json)
-  #   - TAIGA_DEBUG=true
-  #   - TAIGA_API_URL="http://example.com/api/v1/"
-  #   - TAIGA_EVENTS_URL="ws://example.com/events"
-  # Must be in lowercase, because we are using in a json file (conf.json)
-  #   - TAIGA_PUBLIC_REGISTER_ENABLED=false
-  #   - DEFAULT_LANGUAGE="en"
-  # ports:
-  #   - "80:80"
-  depends_on:
-    # It would be better to add 'postgres' to 'depends_on' on 'backend' service
-    # but 'celeryworker' extends 'backend' and we cannot extend a service
-    # if it is using 'depends_on'.
-    - postgresql
-    - backend
-    - events
-
-celeryworker:
-  extends: backend
-  entrypoint: []
-  # command: ['celery', '-A', 'taiga', 'worker', '-c', '4', '--loglevel', 'info']
-  command: ['celery', '-A', 'taiga', 'worker', '-P', 'gevent', '-c', '4', '--loglevel', 'info']
-  depends_on:
-    - redis
-    - rabbitmq
-
-events:
-  image: registry.witsawa.com/dockertaiga_events:latest
-  environment:
-    # SAME AS DJANGO_SECRET_KEY
-    - TAIGA_SECRET=${DJANGO_SECRET}
-  depends_on:
-    - rabbitmq
